# noory-ai

./: .gitignore  CLAUDE.md  LICENSE  README.md
.claude-plugin/: marketplace.json
.claude/skills/claude-plugin-ref/: SKILL.md
distill/: .gitignore  .mcp.json  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  README.md  ROADMAP.md  pyproject.toml
distill/.claude-plugin/: plugin.json
distill/.claude/commands/: build.md
distill/.claude/rules/: contribution.md
distill/.claude/skills/distill/: SKILL.md
distill/docs/: architecture.md  configuration.md  development.md
distill/hooks/: hooks.json
distill/shared/: prompts.md
distill/skills/distill/: SKILL.md
distill/src/distill/: __init__.py  __main__.py  config.py  server.py
distill/src/distill/extractor/: crystallize.py  extractor.py  llm_client.py  parser.py  prompts.py  rules_reader.py  sampling_error.py
distill/src/distill/hooks/: __init__.py  distill_hook.py
distill/src/distill/scanner/: __init__.py  scanner.py  types.py
distill/src/distill/store/: metadata.py  scope.py  types.py  vector.py
distill/src/distill/tools/: __init__.py  digest.py  helpers.py  ingest.py  init.py  learn.py  memory.py  profile.py  recall.py  store.py
distill/tests/: conftest.py  crystallize.test.ts  extractor.test.ts  rules-reader.test.ts  scanner.test.ts  test_config.py  test_crystallize.py  test_distill_hook.py  test_extract_knowledge.py  test_extractor.py  test_ingest.py  test_init.py  test_metadata.py  test_parser.py  test_rules_reader.py  test_scanner.py  test_scope.py  test_store.py  test_tools_digest.py  test_tools_helpers.py  test_tools_learn.py  test_tools_memory.py  test_tools_profile.py  test_tools_recall.py  test_vector.py
distill/tests/helpers/: factories.py  mock_server.py
distill/tests/manual/: test-sampling.ts
evonest/: .gitignore  .mcp.plugin.json  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  ROADMAP.md  pyproject.toml
evonest/.claude/: settings.json
evonest/.claude-plugin/: marketplace.json  plugin.json
evonest/.claude-plugin/commands/: personas.md
evonest/.claude/commands/: dev.md  release.md  test.md
evonest/commands/: analyze.md  evolve.md  identity.md  improve.md
evonest/docs/: architecture.md  configuration.md  mcp-tools.md  self-evolution.md
evonest/hooks/: hooks.json  post-improve.sh
evonest/mutations/: adversarial.json
evonest/skills/evonest/: SKILL.md
evonest/src/evonest/: __init__.py  __main__.py  _runner.py  cli.py  server.py
evonest/src/evonest/core/: backlog.py  claude_runner.py  config.py  doc_updater.py  history.py  improve.py  initializer.py  lock.py  meta_observe.py  mutations.py  notify.py  orchestrator.py  paths.py  phases.py  process_manager.py  progress.py  repositories.py  scout.py  state.py
evonest/src/evonest/mutations/: personas.json
evonest/src/evonest/prompts/: execute.md  identity_draft.md  meta_observe.md  observe.md  observe_deep.md  plan.md  scout.md  update_docs.md  verify.md
evonest/src/evonest/templates/: backlog.json  config.json  identity.md  progress.json
evonest/src/evonest/tools/: analyze.py  backlog.py  config.py  decide.py  evolve.py  history.py  identity.py  improve.py  init.py  personas.py  progress.py  proposals.py  run.py  scout.py  status.py  stimuli.py  update_docs.py
evonest/tests/: conftest.py  test_backlog.py  test_claude_runner.py  test_cli.py  test_config.py  test_history.py  test_initializer.py  test_lock.py  test_meta_observe.py  test_mutations.py  test_orchestrator.py  test_paths.py  test_personas_tool.py  test_phases.py  test_progress.py  test_repositories.py  test_scaffold.py  test_scout.py  test_server.py  test_state.py  test_update_docs.py
