[project]
name = "distill"
version = "1.0.0"
description = "MCP server that extracts reusable knowledge from Claude Code conversations"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11,<3.14"
keywords = ["claude-code", "mcp", "knowledge", "distill"]
dependencies = [
    "fastmcp>=2.0",
    "fastembed>=0.4",
    "sqlite-vec>=0.1.6",
    "pydantic>=2.0",
    "anthropic>=0.40",
]

[project.scripts]
distill = "distill.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/distill"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
]
