[project]
name = "distill"
version = "1.0.0"
description = "MCP server that extracts reusable knowledge from Claude Code conversations"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11,<3.14"
keywords = ["claude-code", "mcp", "knowledge", "distill"]
dependencies = [
    "fastmcp>=2.0",
    "fastembed>=0.7,<0.8",
    "sqlite-vec>=0.1.6",
    "pydantic>=2.0",
]

[project.scripts]
distill = "distill.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/distill"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["src"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

# fastembed 0.7.x는 pillow<12.0을 요구하므로 12.x로 업그레이드 불가
# fastembed가 pillow 12.x를 지원할 때까지 11.x 유지

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pytest-cov>=6.0",
    "mypy>=1.10",
    "ruff>=0.8",
]
