[project]
name = "evonest"
version = "0.6.0"
description = "Autonomous code evolution engine — observe, plan, execute, verify"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [{ name = "Evonest Contributors" }]
keywords = ["mcp", "claude", "evolution", "code-quality", "autonomous"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Quality Assurance",
]
dependencies = [
    "mcp[cli]>=1.0",
]

[project.urls]
Homepage = "https://github.com/noory-code/noory-ai/tree/main/evonest"
Repository = "https://github.com/noory-code/noory-ai"
Changelog = "https://github.com/noory-code/noory-ai/blob/main/evonest/CHANGELOG.md"

[project.scripts]
evonest = "evonest:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/evonest"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-cov>=6.0",
    "pytest-asyncio>=0.24",
    "mypy>=1.10",
    "ruff>=0.8",
]
